@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/cfitsio/Attic/cfitsio-2.510.ebuild,v 1.1 2005/05/18 06:02:32 nerdboy Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/cfitsio/Attic/cfitsio-2.510.ebuild,v 1.2 2005/06/27 00:03:03 nerdboy Exp $
 
 inherit eutils
 
@@ -12,7 +12,7 @@ SRC_URI="ftp://heasarc.gsfc.nasa.gov/software/fitsio/c/${PN}${PV//.}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86 ~sparc ~hppa ~alpha ~amd64 ~ppc ~ppc64"
+KEYWORDS="x86 sparc ~hppa ~alpha ~amd64 ppc ~ppc64"
 
 DEPEND="virtual/libc"
 
