@@ -1,6 +1,10 @@
 # ChangeLog for sci-libs/cfitsio
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/cfitsio/ChangeLog,v 1.3 2005/05/18 06:02:32 nerdboy Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/cfitsio/ChangeLog,v 1.4 2005/06/27 00:03:03 nerdboy Exp $
+
+  27 Jun 2005; Steve Arnold <nerdboy@gentoo.org> cfitsio-2.500.ebuild,
+  cfitsio-2.510.ebuild:
+  stable bump for tested arches (x86, ppc, sparc) and to close bug 95278
 
 *cfitsio-2.510 (18 May 2005)
 
